<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/medium_margin"
    tools:context=".TampilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/judul_film"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_film"
            android:layout_width="396dp"
            android:layout_height="256dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:contentDescription="@string/gambar"
            android:textAlignment="center"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caption"
            android:textAlignment="center"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_tls_rilis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/tulisan_tgl_rilis"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/tgl_rilis"
            android:textSize="@dimen/medium_text" />

        <TextView
            android:id="@+id/tv_tls_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/tulisan_genre"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/genre"
            android:textSize="@dimen/medium_text" />

        <TextView
            android:id="@+id/tv_tls_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/tulisan_rating"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="@dimen/medium_text" />

        <TextView
            android:id="@+id/tv_tls_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/tulisan_sinopsis"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/sinopsis"
            android:textSize="@dimen/medium_text" />

    </LinearLayout>
</ScrollView>