<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/medium_margin"
    app:cardElevation="@dimen/small_margin"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/small_margin"
        android:orientation="horizontal"
        android:background="#FFFFFE">

        <ImageView
            android:id="@+id/iv_film"
            android:layout_width="256dp"
            android:layout_height="86dp"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:contentDescription="@string/caption"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/judul_film"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_headline"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/sinopsis" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>